--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "webhook-mongodb",
+  "dependencies": {
+    "grunt-bower-task": "^0.3.4",
+    "sails": "~0.10.5",
+    "sails-disk": "~0.10.0",
+    "rc": "~0.5.0",
+    "include-all": "~0.1.3",
+    "ejs": "~0.8.4",
+    "grunt": "0.4.2",
+    "grunt-sync": "~0.0.4",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-sails-linker": "~0.9.5",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-cssmin": "~0.9.0",
+    "grunt-contrib-less": "0.11.1",
+    "grunt-contrib-coffee": "~0.10.1",
+    "sails-mongo": "^0.10.4"
+  },
+  "name": "myproject",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
-  "keywords": [],
-  "dependencies": {
-    "bower": "^1.7.9",
-    "ejs": "2.3.4",
-    "grunt": "1.0.1",
-    "grunt-contrib-clean": "1.0.0",
-    "grunt-contrib-coffee": "1.0.0",
-    "grunt-contrib-concat": "1.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
-    "grunt-contrib-jst": "1.0.0",
-    "grunt-contrib-less": "1.3.0",
-    "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
-    "include-all": "~0.1.6",
-    "rc": "1.0.1",
-    "sails": "~0.12.4",
-    "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.1"
+  "author": {
+    "name": "Brij Mohan",
+    "url": "http://techbrij.com/"
   },
+  "description": "An example of CRUD with MEAN Stack + Sails.js",
   "scripts": {
-    "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "debug": "node debug app.js"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/williamhuang/webhook-mongodb.git"
+    "url": "https://github.com/techbrij/sails-angularjs-mongodb-crud.git"
   },
-  "author": "williamhuang",
   "license": ""
 }
